--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,15 @@
     --footer-color: #2F303A;
     --color-title: #212121;
     --color-text: #757575;
-    --accent-color:#2196F3;
+    --accent-color: #2196F3;
 }
+
 *,
 *::before,
 *::after {
     box-sizing: border-box;
 }
+
 h1,
 h2,
 h3,
@@ -18,34 +20,44 @@ h6,
 p {
     margin: 0;
 }
+
 ul,
 ol {
     margin: 0;
     padding-left: 0;
 }
+
 img {
     display: block;
 }
+
 body {
     font-family: "Roboto", sans-serif;
     color: var(--color-text);
 }
+
 .list {
     list-style: none;
 }
+
 .link {
     text-decoration: none;
-} .section {
+}
+
+.section {
     padding-top: 94px;
     padding-bottom: 94px;
 }
+
 .conteiner {
     width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+    outline: 1px solid black;
 }
+
 /*----------- Header---------*/
 
 .header {
@@ -69,18 +81,23 @@ body {
     letter-spacing: 0.03em;
     color: var(--accent-color)
 }
+
 .logo-black {
-    color: #000000;   
+    color: #000000;
 }
+
 .header-list {
     display: flex;
 }
+
 .header-list .link.current {
     color: var(--accent-color);
 }
- .header-item + .header-item {
+
+.header-item +.header-item {
     margin-left: 50px;
 }
+
 .header-link {
     display: block;
     padding-top: 32px;
@@ -92,17 +109,21 @@ body {
     letter-spacing: 0.02em;
     color: var(--color-title);
 }
+
 .header-link:hover,
 .header-link:focus {
     color: var(--accent-color);
 }
+
 .header-secondlist {
     display: flex;
     margin-left: auto;
 }
-.header-seconditem + .header-seconditem {
+
+.header-seconditem +.header-seconditem {
     margin-left: 50px;
 }
+
 .header-secondlink {
     padding-top: 32px;
     padding-bottom: 32px;
@@ -114,18 +135,34 @@ body {
     color: var(--color-text);
 }
 .header-secondlink:hover,
-.header-secondlink:focus{
+.header-secondlink:focus {
     color: var(--accent-color);
 }
 /*------------section-1-----------*/
 
 .hero {
+    max-width: 1600px;
+    height: 600px;
+    margin-left: auto;
+    margin-right: auto;
     background-color: var(--footer-color);
     text-align: center;
     padding-top: 200px;
     padding-bottom: 200px;
-    
+    background-image: linear-gradient(
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)
+    ), 
+    url(../imedges/studio/Img\ Hero.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+  
+  
 }
+.overlay {
+  
+}
+
 .hero-title {
     max-width: 696px;
     margin-left: auto;
@@ -139,12 +176,13 @@ body {
     color: #FFFFFF;
     margin-bottom: 30px;
 }
+
 .hero-button {
     padding: 10px 32px;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
-   
+
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
@@ -156,14 +194,16 @@ body {
     border-radius: 4px;
     cursor: pointer;
 }
+
 .hero-button:hover,
 .hero-button:focus {
-background-color: #188CE8;
+    background-color: #188CE8;
 }
+
 /*------------section-2-----------*/
 
 /*.visually-hidden-скрывает заголовок*/
-.visually-hidden {   
+.visually-hidden {
     position: absolute;
     white-space: nowrap;
     width: 1px;
@@ -175,15 +215,19 @@ background-color: #188CE8;
     clip-path: inset(50%);
     margin: -1px;
 }
+
 .dignity-list {
     display: flex;
 }
+
 .dignity-item {
     width: 270px;
 }
-.dignity-item + .dignity-item {
+
+.dignity-item +.dignity-item {
     margin-left: 30px;
 }
+
 .dignity-subtitle {
     font-weight: 700;
     font-size: 14px;
@@ -192,16 +236,29 @@ background-color: #188CE8;
     text-transform: uppercase;
     color: var(--color-title);
     margin-bottom: 10px;
+    margin-top: 30px;
 }
+
 .dignity-text {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
 }
+.dignity-icon {
+    width: 270px;
+    height: 120px;
+    background: #F5F4FA;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /*------------section-3-----------*/
 .activyti {
-padding-top: 0;
+    padding-top: 0;
 }
+
 .activyti-title {
     font-weight: 700;
     font-size: 36px;
@@ -210,19 +267,23 @@ padding-top: 0;
     letter-spacing: 0.03em;
     color: var(--color-title);
     margin-bottom: 50px;
-    
+
 }
+
 .activyti-list {
     display: flex;
 }
-.imedges + .imedges {
+
+.imedges+.imedges {
     margin-left: 30px;
 }
+
 /*------------section-4-----------*/
 
 .command {
     background-color: #F5F4FA;
 }
+
 .command-title {
     font-weight: 700;
     font-size: 36px;
@@ -232,27 +293,32 @@ padding-top: 0;
     color: var(--color-title);
     margin-bottom: 50px;
 }
+
 .command-list {
     display: flex;
     flex-wrap: wrap;
 }
+
 .command-item {
     width: calc((100% - 90px)/4);
     margin-right: 30px;
 
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-    0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+        0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
+
 .command-item:nth-child(4n) {
-margin-right: 0;
+    margin-right: 0;
 }
+
 .command-aside {
     padding-top: 30px;
     padding-bottom: 30px;
 }
+
 .command-subtitle {
     margin-bottom: 10px;
 
@@ -263,6 +329,7 @@ margin-right: 0;
     letter-spacing: 0.03em;
     color: var(--color-title)
 }
+
 .command-text {
     font-size: 16px;
     line-height: 1.18;
@@ -270,34 +337,115 @@ margin-right: 0;
     letter-spacing: 0.03em;
     margin-bottom: 16px;
 }
+
 .command-soc-list {
     display: flex;
     justify-content: center;
 }
-.command-soc-item + .command-soc-item {
-margin-left: 10px;
+
+.command-soc-item +.command-soc-item {
+    margin-left: 10px;
 }
+
 .command-soc-link {
     width: 44px;
     height: 44px;
     border-radius: 50%;
-  
     display: flex;
     justify-content: center;
     align-items: center;
     fill: #AFB1B8;
 }
+
 .command-soc-link:hover,
 .command-soc-link:focus {
     background-color: var(--accent-color);
     fill: #ffffff;
 }
+/*-----------section-5-----------*/
+.clients-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+     color: var(--color-title);
+     margin-bottom: 50px;
+}
+.clients-list {
+    display: flex;
+}
+.clients-item +.clients-item {
+    margin-left: 30px;
+}
+.clients-link {
+    width: 170px;
+    height: 92px;
+    border: 1px solid #AFB1B8;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.clients-icon {
+    fill: #AFB1B8;
+}
+.clients-link:hover,
+.clients-link:focus {
+    border-color:var(--accent-color);
+    cursor: pointer;
+}
+.clients-icon:hover,
+.clients-icon:focus {
+    fill: var(--accent-color);
+}
 /*------------footer-----------*/
+.foter-conteiner {
+    display: flex;
+}
+.footer-soc-list {
+    display: flex;
+    justify-content: center;
+}
+.footer-soc {
+    margin-top: 12px;
+    margin-left: 70px;
+}
+.footer-text {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    color: #FFFFFF;
+}
+
+.footer-soc-item + .footer-soc-item {
+    margin-left: 10px;
+}
+
+.footer-soc-link {
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.1);
+    fill: #ffffff;
+}
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+    background-color: var(--accent-color);
+    fill: #ffffff;
+}
 .footer {
     background-color: var(--footer-color);
- padding-top: 60px;
- padding-bottom: 60px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
+
 .logo-footer {
     font-family: 'Raleway';
     font-style: normal;
@@ -307,47 +455,58 @@ margin-left: 10px;
     letter-spacing: 0.03em;
     color: var(--accent-color)
 }
+
 .logo-white {
     color: #FFFFFF;
 }
+
 .footer-address {
     font-style: normal;
 }
+
 .footer-address-link {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: #FFFFFF;
 }
+
 .footer-address-link:hover,
 .footer-address-link:focus {
-color: var(--accent-color);
+    color: var(--accent-color);
 }
-.logo-footer + .footer-address {
+
+.logo-footer+.footer-address {
     margin-top: 20px;
 }
-.footer-item + .footer-item {
+
+.footer-item+.footer-item {
     margin-top: 9px;
 }
-    .footer-link {
+
+.footer-link {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
 }
+
 .footer-link:hover,
 .footer-link:focus {
-color: var(--accent-color);
+    color: var(--accent-color);
 }
-/*------------section-5------------*/
+
+/*------------section-6------------*/
 .list-button {
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
 }
-.button-item + .button-item{
+
+.button-item+.button-item {
     margin-left: 8px;
 }
+
 .progects-button {
     padding: 6px 22px;
 
@@ -360,21 +519,25 @@ color: var(--accent-color);
     background: #F5F4FA;
     border-radius: 4px;
 }
+
 .progects-button:focus,
 .progects-button:hover {
     color: #FFFFFF;
     background-color: var(--accent-color);
     cursor: pointer;
 }
+
 .progects-list {
     display: flex;
     flex-wrap: wrap;
 }
+
 .progects-item {
     width: calc((100% - 60px)/3);
     margin-right: 30px;
     margin-bottom: 30px;
 }
+
 .border {
     background: #FFFFFF;
     border-right: 1px solid #EEEEEE;
@@ -382,12 +545,15 @@ color: var(--accent-color);
     border-left: 1px solid #EEEEEE;
     padding: 20px 24px;
 }
+
 .progects-item:nth-child(3n) {
     margin-right: 0;
 }
+
 .progects-item:nth-last-child(-n + 3) {
     margin-bottom: 0;
 }
+
 .progects-title {
     font-weight: 700;
     font-size: 18px;
@@ -395,6 +561,7 @@ color: var(--accent-color);
     letter-spacing: 0.06em;
     color: var(--color-title);
 }
+
 .progects-text {
     margin-top: 4px;
 
