--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ body {
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-    outline: 1px solid black;
+   /* outline: 1px solid black;*/
 }
 
 /*----------- Header---------*/
@@ -525,6 +525,10 @@ body {
     color: #FFFFFF;
     background-color: var(--accent-color);
     cursor: pointer;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+    0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
 }
 
 .progects-list {
@@ -552,6 +556,14 @@ body {
 
 .progects-item:nth-last-child(-n + 3) {
     margin-bottom: 0;
+}
+.progects-item:hover,
+.progects-item:focus {
+    background: #FFFFFF;
+    border: 1px solid #EEEEEE;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+    0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .progects-title {
