--- a/css/styles.css
+++ b/css/styles.css
@@ -560,8 +560,11 @@ body {
 .progects-item:nth-last-child(-n + 3) {
     margin-bottom: 0;
 }
-.progects-item:hover,
-.progects-item:focus {
+.progects-link {
+    display: block;
+}
+.progects-link:hover,
+.progects-link:focus {
     background: #FFFFFF;
     border: 1px solid #EEEEEE;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
